Perubahan slider dan responsive layar

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     }
 </style>
 <body>
-    
+
 <!--Nav-->
 <nav x-data="{show:false}" class="w-full z-10" style="background-color: #FEAA52; position: fixed;">
     <div class="container mx-auto px-3 py-2 lg:px-20 flex items-center justify-between flex-wrap">
@@ -145,29 +145,25 @@
 
 <!--produk-->
 <section id="produk">
-<div class="grid grid-cols-1 xl:grid-cols-2 md:grid-cols-1 2xl:grid-cols-2 pt-10">
-    <div class="pt-2 2xl:pt-4">
-        <div class="img-produk" style="background-image: url(/public/img/undraw_Relaxing_at_home_re_mror.svg);background-size: cover; height: 100%; width: 100%; background-repeat: no-repeat; position: relative;">
+    <div class="grid grid-cols-1 xl:grid-cols-2 md:grid-cols-1 2xl:grid-cols-2 pt-16">
+        <div class="grid 2xl:pt-24" style="background-image: url(/public/img/undraw_Relaxing_at_home_re_mror.svg); background-size: cover; height: 31rem;">
             <div>
-            <p class="text-xl xl:text-2xl text-center font-bold sm:pt-0 xl:pt-10 md:p-3">Sesuaikan Produk Dengan Kebutuhan Anda</p>
-            <p class="text-center text-md p-2 2xl:text-1xl">Berbagai Variasi produk untuk kebutuhan perusahaan Anda</p>
-            <p class="text-center text-sm p-1 2xl:text-1xl xl:text-1xl">Single Split | Multi Split | Air Purifer</p>
-            <p class="text-center text-sm p-1 2xl:text-1xl xl:text-1xl">VRV Home Series | Multi NX-32</p>
-            <p class="text-center text-sm p-1 2xl:text-1xl xl:text-1xl">Sky Air | VRV Control System</p>
+            <p class="text-2xl xl:text-2xl text-center font-bold pt-24 xl:pt-10 md:p-3">Sesuaikan Produk Dengan Kebutuhan Anda</p>
+            <p class="text-center text-xl p-2 2xl:text-1xl">Berbagai Variasi produk untuk kebutuhan perusahaan Anda</p>
+            <p class="text-center text-xl p-1 2xl:text-1xl xl:text-1xl">Single Split | Multi Split | Air Purifer</p>
+            <p class="text-center text-xl p-1 2xl:text-1xl xl:text-1xl">VRV Home Series | Multi NX-32</p>
+            <p class="text-center text-xl p-1 2xl:text-1xl xl:text-1xl">Sky Air | VRV Control System</p>
+            </div>
+        </div>
+        <div class="container">
+            <div id="proparallax">
+                <img class="one" src="" alt="">
+                <img class="two" src="" alt="">
+                <img class="theree" src="" alt="">
             </div>
         </div>
     </div>
-    <div>
-        <div class=web-slider>
-        <div class=isi-slider>
-            <img src="/public/img/public-area.png"  alt="Gambar 1">
-            <img src="/public/img/living-room.png"  alt="Gambar 2">
-            <img src="/public/img/office-room.png"  alt="Gambar 3">
-        </div>
-        </div>
-    </div>
-</div>
-</section>
+    </section>
 
 <!--keunggulan-->
 <section id="keunggulan">
