--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- AOS CSS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/release/v5.11.2/css/all.css">
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js">
     </script>
@@ -41,14 +40,15 @@
 <body>
 
 <!--Nav-->
-<nav x-data="{show:false}" class="w-full z-10 p-2 pt-2" style="background-color: #FEAA52; position: fixed;">
-    <div class="container mx-auto px-4 lg:px-20 flex items-center justify-between flex-wrap">
-        <div class="flex items-center flex-shrink-0 text-green-400">
-            <p class="font-bold text-2xl xl:text-3xl lg:text-3xl tracking-tight text-white">SewaAC.co.id</p>
+<!--Nav-->
+<nav x-data="{show:false}" class="z-10" style="background-color: #FEAA52; position: fixed; height: fit-content; width: 100%;">
+    <div class="container mx-auto px-3 py-2 lg:px-20 flex items-center justify-between flex-wrap">
+        <div class="flex items-center flex-shrink-0 text-green-400 mr-6">
+            <p class="font-bold text-2xl  xl:text-3xl lg:text-3xl tracking-tight text-white">SewaAC.co.id</p>
         </div>
         <div class="block lg:hidden">
             <button @click="show=!show"
-                class="flex items-center px-4 py-2 border rounded text-gray-600 border-gray-600">
+                class="flex items-center px-3 py-2 border rounded text-gray-600 border-gray-600">
                 <svg class="fill-current h-4 w-4" viewBox="0 0 20 20">
                     <title>menu</title>
                     <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
@@ -77,7 +77,7 @@
 
 <!--Hero-->
 <section id="beranda">
-<div class="top-0 w-full h-screen bg-cover bg-opacity-25 mx-auto" style="background-image: url(/public/img/bg-baru.png); background-size: cover; background-repeat: no-repeat;">
+<div class="bg-opacity-25" style="background-image: url(/public/img/bg-baru.png); background-size: cover; background-repeat: no-repeat; height: 100%; width: 100%;">
     <div class="container mx-auto">
         <div class="2xl:flex xl:flex lg:grid md:grid grid xl:justify-between lg:grid-cols-1 grid-cols-1 md:grid-cols-1">
             <div class="xl:w-1/2 2xl:pt-72 xl:pt-10 pt-32 md:pt-24 sm:pt-16">
@@ -145,16 +145,16 @@
 
 <!--produk-->
 <section id="produk">
-    <div class="flex flex-items-start">
-    <div class="grid grid-cols-1 xl:grid-cols-2 md:grid-cols-2 2xl:grid-cols-2">
-        <div class="grid bg-produk">
-            <p class="text-xl xl:text-2xl text-center font-bold xl:pt-10 p-3">Sesuaikan Produk Dengan Kebutuhan Anda</p>
-            <p class="text-center text-md p-2 2xl:text-1xl">Berbagai Variasi produk untuk kebutuhan perusahaan Anda</p>
-            <p class="text-center text-md p-1 2xl:text-1xl xl:text-1xl">Single Split | Multi Split | Air Purifer</p>
-            <p class="text-center text-md p-1 2xl:text-1xl xl:text-1xl">VRV Home Series | Multi NX-32</p>
-            <p class="text-center text-md p-1 2xl:text-1xl xl:text-1xl">Sky Air | VRV Control System</p>
+    <div class="grid grid-cols-1 xl:grid-cols-2 md:grid-cols-2 2xl:grid-cols-2 pt-10">
+        <div class="grid mx-auto">
+            <ul class="list-inside">
+                <p class="text-xl xl:text-2xl text-center font-bold xl:pt-10 pt-5">Sesuaikan Produk Dengan Kebutuhan Anda</p>
+                <p class="text-center text-md 2xl:text-1xl pt-5">Berbagai Variasi produk untuk kebutuhan perusahaan Anda</p>
+                <li class=" text-center text-sm pt-2">Single Split | Multi Split | Air Purifer</li>
+                <li class=" text-center text-sm pt-2">VRV Home Series | Multi NX-32</li>
+                <li class=" text-center text-sm pt-2">Sky Air | VRV Control System</li>
+            </ul>
         </div>
-
         <div class="grid container-proparallax">
             <div id="proparallax">
                 <img class="one" src="/public/img/office-room.png" alt="">
@@ -163,38 +163,37 @@
             </div>
         </div>
     </div>
-    </div>
 </section>
 
 <!--keunggulan-->
 <section id="keunggulan">
 <h1 class="text-center text-xl xl:text-3xl font-bold pt-14 xl:pt-24">Kenapa Memilih Kami</h1>
-<div class="p-16 pr-28 grid grid-cols- md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-4 xl:gap-10 place-content-center">
-    <div data-aos="fade-right" data-aos-duration="3000">
+<div class="p-10 pr-24 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-4 xl:gap-10 place-content-center">
+    <div data-aos="fade-right" data-aos-duration="1000">
         <img src="/public/img/servis-rutin-2.png" class="place-content-center xl:pl-24" style="width: 30rem;" alt="">
     </div>
-    <div data-aos="fade-left" data-aos-duration="3000">
+    <div data-aos="fade-left" data-aos-duration="1000">
         <p class="text-left text-md md:text-left  2xl:text-left xl:text-left md:text-1xl xl:text-2xl font-bold pb-3 xl:pt-5">Servis Rutin Tiap Bulan</p>
         <p class="text-left text-sm md:text-justify  2xl:text-left xl:text-left md:text-md xl:text-1xl">Anda tidak perlu lagi khawatir lupa servis tiap bulan, tim kami akan mengingatkan Anda sehingga AC Anda akan terhindar dari kuman dan debu</p>
     </div>
-    <div data-aos="fade-right" data-aos-duration="3000">
+    <div data-aos="fade-right" data-aos-duration="1000">
         <img src="/public/img/unit-baru.png" class="place-content-center xl:pl-24" style="width: 25rem;" alt="">
     </div>
-    <div data-aos="fade-left" data-aos-duration="3000">
+    <div data-aos="fade-left" data-aos-duration="1000">
         <p class="text-left text-md md:text-left  2xl:text-left xl:text-left md:text-1xl xl:text-2xl font-bold pb-3 pt-5">Unit Ganti Baru</p>
         <p class="text-left text-sm md:text-justify  2xl:text-left xl:text-left md:text-md xl:text-1xl">Jika unit masih dalam masa garansi akan kami ganti dengan unit yang baru tidak perlu khawatir dengan biaya tambahan lainnya</p>
     </div>
-    <div data-aos="fade-right" data-aos-duration="3000">
+    <div data-aos="fade-right" data-aos-duration="1000">
         <img src="/public/img/call-center.png" class="place-content-center xl:pl-24" style="width: 25rem;" alt="">
     </div>
-    <div data-aos="fade-left" data-aos-duration="3000">
+    <div data-aos="fade-left" data-aos-duration="1000">
         <p class="text-left text-md md:text-left  2xl:text-left xl:text-left md:text-1xl xl:text-2xl font-bold pb-3 pt-5">Bantuan 24/7</p>
         <p class="text-left text-sm md:text-justify 2xl:text-left xl:text-left md:text-md xl:text-1xl">Hubungi kami kapanpun Anda membutuhkan, karena Kami akan selalu ada untuk Anda</p>
     </div>
-    <div data-aos="fade-right" data-aos-duration="3000">
+    <div data-aos="fade-right" data-aos-duration="1000">
         <img src="/public/img/garansi.png" class="place-content-center xl:pl-24" style="width: 25rem;" alt="">
     </div>
-    <div data-aos="fade-left" data-aos-duration="3000">
+    <div data-aos="fade-left" data-aos-duration="1000">
         <p class="text-left text-md md:text-left  2xl:text-left xl:text-left md:text-1xl xl:text-2xl font-bold pb-3 pt-5">Garansi AC Dingin</p>
         <p class="text-left text-sm md:text-justify  2xl:text-left xl:text-left md:text-md xl:text-1xl">Tidak hanya unit yang Kami garansikan, tapi Kami menggaransikan AC tetap dingin untuk kenyamanan Anda di ruangan</p>
     </div>
@@ -208,7 +207,7 @@
 </div>
 <div class="p-14 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-10">
     <!--Card Jakarta-->
-    <div data-aos="zoom-in" data-aos-duration="2000">
+    <div data-aos="zoom-in" data-aos-duration="1000">
     <div class="rounded shadow-lg transform hover:-translate-y-1 overscroll-auto cursor-pointer">
         <img class="w-full hover:opacity-25" src="/public/img/sewa-ac-1.PNG">
         <div class="relative px-4 -mt-16 pb-3">
@@ -219,7 +218,7 @@
     </div>
     </div>
     <!--Card Medan-->
-    <div data-aos="zoom-in" data-aos-duration="2000">
+    <div data-aos="zoom-in" data-aos-duration="1000">
     <div class="rounded shadow-lg transform hover:-translate-y-1 overscroll-auto cursor-pointer">
         <img class="w-full hover:opacity-25" src="/public/img/sewa-ac-2.PNG">
         <div class="relative px-4 -mt-16 pb-3">
@@ -230,7 +229,7 @@
     </div>
     </div>
     <!--Card Bali-->
-    <div data-aos="zoom-in" data-aos-duration="2000">
+    <div data-aos="zoom-in" data-aos-duration="1000">
     <div class="rounded shadow-lg transform hover:-translate-y-1 overscroll-auto cursor-pointer">
         <img class="w-full hover:opacity-25" src="/public/img/sewa-ac-3.PNG">
         <div class="relative px-4 -mt-16 pb-3">
@@ -241,7 +240,7 @@
     </div>
     </div>
     <!--Card Surabaya-->
-    <div data-aos="zoom-in" data-aos-duration="2000">
+    <div data-aos="zoom-in" data-aos-duration="1000">
     <div class="rounded shadow-lg transform hover:-translate-y-1 overscroll-auto cursor-pointer">
         <img class="w-full hover:opacity-25" src="/public/img/sewa-ac-4.PNG">
         <div class="relative px-4 -mt-16 pb-3">
@@ -252,7 +251,7 @@
     </div>
     </div>
     <!--Card Makasar-->
-    <div data-aos="zoom-in" data-aos-duration="2000">
+    <div data-aos="zoom-in" data-aos-duration="1000">
     <div class="rounded shadow-lg transform hover:-translate-y-1 overscroll-auto cursor-pointer">
         <img class="hover:opacity-25 w-full" src="/public/img/sewa-ac-5.PNG">
         <div class="relative px-4 -mt-16 pb-3">
@@ -263,7 +262,7 @@
     </div>
     </div>
     <!--Card Yogyakarta-->
-    <div data-aos="zoom-in" data-aos-duration="2000">
+    <div data-aos="zoom-in" data-aos-duration="1000">
     <div class="rounded shadow-lg transform hover:-translate-y-1 overscroll-auto cursor-pointer">
         <img class="w-full hover:opacity-25" src="/public/img/sewa-ac-6.PNG">
         <div class="relative px-4 -mt-16 pb-3">
@@ -296,7 +295,7 @@
             </div>
             <div class="mb-4">
                 <label for="pesan" class="block text-black-700 text-sm font-bold mb-2" >Pesan</label>
-                <textarea class="border-2 rounded text-sm h-28 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="pesan" placeholder="ada yang ingin Anda Sampaikan?"></textarea>
+                <textarea class="border-2 rounded text-sm h-28 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="pesan" placeholder="ada yang ingin Anda sampaikan?"></textarea>
             </div>
             <button type="submit" class="bg-green-500 hover:blue-700 text-white font-bold py-2 px-4 rounded">Kirim</button>
         </form>
@@ -312,7 +311,7 @@
     <div class="" style="background-color: #FEAA52;">
     <div class="container mx-auto px-6 lg:px-20 py-12">
         <div class="lg:flex">
-            <div class="w">
+            <div class="w-full">
                 <div class="lg:flex">
                     <div class="w-full mb-4 lg:mb-0 lg:w-1/2">
                         <h2 class="font-bold text-2xl md:text-3xl xl:text-4xl text-gray-100 mb-4">SewaAC.co.id</h2>
